<resources>
    <string name="app_name">CB MARISTES ALGEMESI</string>

    <!-- ACTIVITY LOGIN -->
    <string name="login">LOGIN</string>
    <string name="signintocontinue">Sign in to continue</string>
    <string name="back">BACK</string>
    <string name="signup">SIGNUP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="createaccount">Create New Account</string>
    <string name="name">Name</string>
    <string name="forgotPass">Forgot your password?</string>
    <string name="sendEmail">Send Email</string>
    <string name="resetPass">Reset your password</string>


    <!-- DIALOGS -->
    <string name="error">Error!!</string>
    <string name="youmust">You must fill all the fields</string>
    <string name="incorrectEmail">Incorrect email or password</string>

    <!-- TOOLBAR -->
    <string name="logout">Logout</string>
    <string name="permissions">Permissions</string>
    <string name="settings">Settings</string>

    <!-- BOTTOM NAVIGATION -->
    <string name="inicio">Home</string>
    <string name="clasificaciones">Classifications</string>
    <string name="jugadores">Players</string>
    <string name="galeria">Images</string>
    <string name="chat">Chat</string>

    <!-- RECYCLER VIEW -->
    <string name="nombre">NAME</string>
    <string name="registration">TYPE</string>
    <string name="edad">AGE</string>

    <!-- CHAT -->
    <string name="mensaje">Message</string>

    <!-- Preference Chat -->
    <string name="chatPreference">Chat Settings</string>
    <string name="userPreference">Chat name</string>
    <string name="chatcolorPreference">Message color</string>
    <string name="textColor">Text color</string>

    <!-- Preference Cache -->
    <string name="cachePreference">Caché memory</string>
    <string name="offlineMode">Offline mode</string>

    <!-- Preference General -->
    <string name="general">General</string>
    <string name="vibrate">Vibrate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>