<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/inicio"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/inicio"/>
    <item
        android:id="@+id/clasificaciones"
        android:enabled="true"
        android:icon="@drawable/ic_classification"
        android:title="@string/clasificaciones" />
    <item
        android:id="@+id/jugadores"
        android:enabled="true"
        android:icon="@drawable/ic_players"
        android:title="@string/jugadores" />
    <item
        android:id="@+id/chat"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat" />
    <item
        android:id="@+id/imagenes"
        android:enabled="true"
        android:icon="@drawable/ic_images"
        android:title="@string/galeria" />
</menu>