<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.SignupFragment"
    android:background="@drawable/signup">


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/email"
        android:textColor="#FFE2E623"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/emailEditText2"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:hint="Jordi"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textColorHighlight="#B1B313"
        android:textColorLink="#E0E423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/password"
        android:textColor="#FFE2E623"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText2" />

    <Button
        android:id="@+id/signupButton2"
        android:layout_width="219dp"
        android:layout_height="52dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="635dp"
        android:layout_marginEnd="110dp"
        android:backgroundTint="#3B452D"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/signup"
        android:textColor="#E2E623"
        android:textSize="15sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="216dp"
        android:layout_height="83dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="98dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/createaccount"
        android:textAlignment="center"
        android:textColor="#FFE2E623"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="148dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="#151a30"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/back"
        app:icon="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/name"
        android:textColor="#FFE2E623"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <EditText
        android:id="@+id/passEditText2"
        android:layout_width="215dp"
        android:layout_height="48dp"
        android:layout_marginStart="92dp"
        android:ems="10"
        android:fontFamily="@font/poppins_medium"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

</androidx.constraintlayout.widget.ConstraintLayout>